# LSPBook

./: .gitignore  LICENSE  README.md  build_book.tex  tex_build.sh
.github/: FUNDING.yml
assembly-lsp/: Cargo.toml
assembly-lsp/src/: main.rs
book/: code_fmt.tex  context.tex  main.tex
book/sections/part1/: getting_started.tex  hover_support.tex  introduction.tex  quam.tex
book/sections/preamble/: changelog.tex  contacts.tex
code/: hello_lsp  hello_lsp.s
code/chapter_1/assembly-lsp/: hand_test.sh  server_init_rpc.txt
code/chapter_1/assembly-lsp/src/: main.rs
code/chapter_2/assembly-lsp/: Cargo.toml
code/chapter_2/assembly-lsp/src/: instruction.rs  lib.rs  lsp.rs  main.rs  populate.rs
