[package]
name = "assembly-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
crossbeam-channel = "0.5.11"
flexi_logger = "0.27.4"
log = "0.4.20"
lsp-server = "0.7.6"
lsp-types = "0.95.0"
quick-xml = "0.31.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
strum = "0.26.1"
strum_macros = "0.26.1"
